<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_time"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lisa.administrator.sixgold.activity.express.ChooseTimeActivity">

    <com.lisa.administrator.sixgold.view.ActionBarTwoImg
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/white">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/fast_pick_up" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_an_appointment_for_time" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_actionbar_item_height"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/themeBlue"
        android:text="@string/sure"
        android:textColor="@color/white" />
</LinearLayout>
