<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_pwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lisa.administrator.sixgold.activity.FindPwdActivity">

    <com.lisa.administrator.sixgold.view.ActionBarTwoImg
        android:id="@+id/actionbarView_twoImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_high_item_height"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/dp_5"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/tele_phone_num"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_tel_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/defaultBackgroundColor"
            android:hint="@string/please_enter_phone_number"
            android:padding="@dimen/dp_5"
            android:singleLine="true"
            android:textSize="@dimen/textSize_40" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/dp_5"
            android:background="@color/themeBlue"
            android:textColor="@color/white"
            android:text="发送验证码" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_high_item_height"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/dp_5"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/defaultBackgroundColor"
            android:hint="@string/please_enter_verification_code"
            android:textSize="@dimen/textSize_40"
            android:padding="@dimen/dp_5"
            android:singleLine="true"
            android:id="@+id/et_verificationCode" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_high_item_height"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/dp_5"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_pwd"
            android:textColor="@color/black"
            android:id="@+id/textView9" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@color/defaultBackgroundColor"
            android:hint="@string/please_enter_password"
            android:padding="@dimen/dp_5"
            android:singleLine="true"
            android:textSize="@dimen/textSize_40" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_high_item_height"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/dp_5"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_pwd"
            android:textColor="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/defaultBackgroundColor"
            android:hint="@string/please_enter_password"
            android:padding="@dimen/dp_5"
            android:singleLine="true"
            android:textSize="@dimen/textSize_40"
            android:id="@+id/et_re_pwd" />

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/themeBlue"
        android:text="@string/sure"
        android:id="@+id/btn_sure"
        android:textColor="@color/white" />
</LinearLayout>
