<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_local_town_delivery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lisa.administrator.sixgold.activity.HomeLocalTownDeliveryActivity">

    <com.lisa.administrator.sixgold.view.ActionBarOneImg
        android:id="@+id/actionbarView_oneImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_electric_vehicle"
                        android:layout_width="@dimen/dp_60"
                        android:layout_height="@dimen/dp_60"
                        android:background="@drawable/ic_directions_bike_grey_24dp" />

                    <TextView
                        android:id="@+id/tv_electric_vehicle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/electric_vehicle"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView

                        android:id="@+id/iv_mini_bus"
                        android:layout_width="@dimen/dp_60"
                        android:layout_height="@dimen/dp_60"
                        android:background="@drawable/ic_directions_bike_grey_24dp" />

                    <TextView
                        android:id="@+id/tv_mini_bus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mini_bus"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_mini_van"
                        android:layout_width="@dimen/dp_60"
                        android:layout_height="@dimen/dp_60"
                        android:background="@drawable/ic_directions_bike_grey_24dp" />

                    <TextView
                        android:id="@+id/tv_mini_van"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mini_van"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/activity_actionbar_item_height"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_10"
                            android:background="@drawable/ic_add_location_orange_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_5"
                            android:text="@string/from"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/please_choose_from_address" />

                    </LinearLayout>


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/dp_5"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginRight="@dimen/dp_15"
                        android:background="@color/defaultBackgroundColor"
                        android:hint="@string/please_fill_in_detail_address"
                        android:padding="@dimen/dp_5" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/dp_5"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginRight="@dimen/dp_15"
                        android:background="@color/defaultBackgroundColor"
                        android:hint="@string/please_fill_in_sender_name"
                        android:padding="@dimen/dp_5" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/dp_5"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginRight="@dimen/dp_15"
                        android:background="@color/defaultBackgroundColor"
                        android:hint="@string/please_fill_in_sender_tel"
                        android:padding="@dimen/dp_5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/activity_actionbar_item_height"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_10"
                            android:background="@drawable/ic_add_location_blue_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_5"
                            android:text="@string/from"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/please_choose_to_address" />

                    </LinearLayout>


                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/dp_5"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginRight="@dimen/dp_15"
                        android:background="@color/defaultBackgroundColor"
                        android:hint="@string/please_fill_in_detail_address"
                        android:padding="@dimen/dp_5" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/dp_5"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginRight="@dimen/dp_15"
                        android:background="@color/defaultBackgroundColor"
                        android:hint="@string/please_fill_in_recipient_name"
                        android:padding="@dimen/dp_5" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/dp_5"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginRight="@dimen/dp_15"
                        android:background="@color/defaultBackgroundColor"
                        android:hint="@string/please_fill_in_recipient_tel"
                        android:padding="@dimen/dp_5" />

                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_actionbar_item_height"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_10"
                        android:background="@drawable/ic_create_grey_24dp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_5"
                        android:text="@string/order_note"
                        android:textColor="@color/black" />

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/dp_5"
                    android:background="@drawable/ic_keyboard_arrow_right_black_24dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/dp_5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_freight" />
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_estimated"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/estimated" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@+id/tv_estimated"
                                android:text="0元"
                                android:textColor="@color/orange" />
                        </LinearLayout>
                    </RelativeLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_low_item_height"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_check_circle_blue_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/I_have_read_and_agreed" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/service_agreement"
                        android:textColor="@color/orange" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_actionbar_item_height"
                android:layout_marginTop="@dimen/dp_5"
                android:orientation="horizontal"
                android:weightSum="10.1">

                <RelativeLayout

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@color/white"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/iv_instant_car"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="@dimen/dp_5"
                        android:background="@drawable/ic_create_grey_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/iv_instant_car"
                        android:text="@string/instant_car" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1" />

                <RelativeLayout

                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="5"
                    android:background="@color/white"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/iv_make_an_appointment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="@dimen/dp_5"
                        android:background="@drawable/ic_create_grey_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/iv_make_an_appointment"
                        android:text="@string/make_an_appointment" />
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
