<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_and_login_background"
    android:orientation="vertical"
    tools:context="com.lisa.administrator.sixgold.activity.LoginActivity">


    <ImageView
        android:id="@+id/iv_left_back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/ic_chevron_left_grey_24dp" />

    <ImageView
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_40"
        android:background="@mipmap/xinxinwhite" />


    <EditText
        android:id="@+id/et_tel_num"
        style="@style/my_edittext_style_telephone_num"
        android:hint="@string/phone_number" />

    <EditText
        android:id="@+id/et_pwd"
        style="@style/my_edittext_style_password"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btn_login"
        style="@style/my_button_style_01"
        android:text="@string/log_in" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_free_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_45"
            android:padding="@dimen/dp_10"
            android:text="@string/register"
            android:textColor="@color/defaultBackgroundColor" />

        <TextView
            android:id="@+id/tv_foget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_45"
            android:padding="@dimen/dp_10"
            android:text="@string/forget_pwd"
            android:textColor="@color/defaultBackgroundColor" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/dp_50"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/dp_100"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5"
                android:text="第三方登录"
                android:textColor="@color/white" />

            <View
                android:layout_width="@dimen/dp_100"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@color/white" />
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="@dimen/dp_45"
                android:layout_height="@dimen/dp_45"
                android:layout_margin="@dimen/dp_10"
                android:background="@mipmap/qqlogo" />

            <ImageView
                android:layout_width="@dimen/dp_45"
                android:layout_height="@dimen/dp_45"
                android:layout_margin="@dimen/dp_10"
                android:background="@mipmap/weixinlogo" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="@dimen/dp_45"
                android:layout_height="@dimen/dp_45"
                android:layout_margin="@dimen/dp_10"
                android:background="@mipmap/jingdonglogo" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/dp_45"
                android:layout_height="@dimen/dp_45"
                android:layout_margin="@dimen/dp_10"
                android:background="@mipmap/tianmaologo" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
